phpmyadmin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - image: phpmyadmin/phpmyadmin:4.7.7
          name: phpmyadmin
          ports:
            - containerPort: 80
              name: phpmyadmin
