phpmyadmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  ports:
    - port: 80
  selector:
    app: phpmyadmin
  type: LoadBalancer
