phpmyadmin/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: phpmyadmin
              servicePort: 80
